(fix): add z-index to navbar

--- a/maquetado/scss/styles.scss
+++ b/maquetado/scss/styles.scss
@@ -125,6 +125,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
   &::before {
     content:'';
     border-top: 4px solid $cerulean;
